RESOLVED FIXED134504
[UI-side compositing] Bad spinner on news.google.com: animations need to be ordered
https://bugs.webkit.org/show_bug.cgi?id=134504
Summary [UI-side compositing] Bad spinner on news.google.com: animations need to be o...
Simon Fraser (smfr)
Reported 2014-07-01 12:02:35 PDT
[UI-side compositing] Bad spinner on news.google.com: animations need to be ordered
Attachments
Patch (11.68 KB, patch)
2014-07-01 12:06 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2014-07-01 12:06:26 PDT
Simon Fraser (smfr)
Comment 2 2014-07-01 12:07:13 PDT
Simon Fraser (smfr)
Comment 3 2014-07-01 12:16:20 PDT
Note You need to log in before you can comment on or make changes to this bug.